# PythonLab

./: pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
tests/: test_app.py
