[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ...
[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

# OR
#[tool.setuptools.packages.find]
#where = ["src"]  # ["."] by default
#include = ["mypackage*"]  # ["*"] by default
#exclude = ["mypackage.tests*"]  # empty by default
#namespaces = false  # true by default
